[package]
name = "ncp"
version = "0.1.0"
authors = ["Jason NI (nixin) <jason.ni.py@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "0.6.0"
log = "0.4"
env_logger = "0.7"
pretty-hex = "0.2.1"
thiserror = "1.0.11"
tokio = { version = "0.2", features = ["full"] }
